Добавил получение списка заявок на ваш ивент
